# router/app.go
@@ -20,5 +20,6 @@ func Router() *gin.Engine {
 	r.GET("/user/createUser", service.CreateUser)
 	r.GET("/user/deleteUser", service.DeleteUser)
 	r.POST("/user/updateUser", service.UpdateUser)
+	r.POST("/user/FindUserByNameAndPwd", service.FindUserByNameAndPwd)
 	return r
 }
